--- a/process/foreign-investment.html
+++ b/process/foreign-investment.html
@@ -143,13 +143,23 @@
                     Building Permit
                   </td>
                 </tr>
-                <tr class="clickable-row" data-href="utilities.html">
+                <tr class="clickable-row last-row" data-href="utilities.html">
                   <td></td>
                   <td class="number-column">
                     6
                   </td>
                   <td>
                     Utilities
+                  </td>
+                </tr>
+              </tbody>
+            </table>
+            <table class="table state-applications-table table-hover">
+              <tbody>
+                <tr class="clickable-row last-row" data-href="state-applications.html">
+                  <td></td>
+                  <td>
+                    State Applications
                   </td>
                 </tr>
               </tbody>
@@ -171,7 +181,9 @@
             <li>Identify a location and conclude a provisional agreement with the landowner(s) or landlord(s), including title search and clearances, and zoning approvals (if necessary).</li>
           </ol>
           <p>This information is necessary to complete a FIAC application, available <a href="../applications/national/fiac.pdf" target="_blank">here.</a> Submit completed applications to the Foreign Investment Board. Guidelines for the completion of the FIAC application can be found 
-          <a href="../applications/national/fib-requirement.pdf" target="_blank">here.</a>
+          <a href="../applications/national/fib-requirement.pdf" target="_blank">here.</a></p>
+
+          <p>To continue with the rest of the application process, visit the <a href="start-business.html">"Getting Started" page</a>.</p>
 
           
           <h3 class="contact-info-bottom">Contact</h3>
@@ -183,6 +195,7 @@
             <span class="step-content">
               <h5>Foreign Investment Board</h5>
               <span class="phone-number">+680 488-1135</span>
+            </span>
           </div>
         </div>
       </div>
@@ -218,4 +231,3 @@
     <script src="../js/script.js"></script>
   </body>
 </html>
-
