rearranges nav-bar items

--- a/resources/professional-services.html
+++ b/resources/professional-services.html
@@ -54,19 +54,18 @@
                 <li class="dropdown">
                   <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Why Palau?<span class="caret"></span></a>
                   <ul class="dropdown-menu">
-                    <li><a href="../why-palau.html">Overview</a></li>
+                    <li><a href="../why-palau.html">About the Country</a></li>
                     <li><a href="../infrastructure.html">Infrastructure</a></li>
-                    <li><a href="../incentives.html">Incentives</a></li>
                   </ul>
                 </li>
 
-                <!-- <li class="active"><a href="#">Business Types</a></li> -->
-                <li><a href="../business-types.html">Business Types</a></li>
+                
+                <li><a href="../incentives.html">Incentives</a></li>
 
                 <li class="dropdown">
                   <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Process<span class="caret"></span></a>
                   <ul class="dropdown-menu">
-                    <li><a href="../process/start-business.html">Starting a Business</a></li>
+                    <li><a href="../process/start-business.html">Getting Started</a></li>
                     <li><a href="../process/foreign-investment.html">Foreign Investment</a></li>
                   </ul>
                 </li>
@@ -78,7 +77,7 @@
                     <li><a href="sbdc.html">SBDC</a></li>
                     <li><a href="ndbp.html">NDBP</a></li>
                     <li role="separator" class="divider"></li>
-                    <li><a href="#">Legal Services</a></li>
+                    <li><a href="#">Professional Services</a></li>
                     <li><a href="all-applications.html">Applications</a></li>
                     <li><a href="resources.html">All Resources</a></li>
                   </ul>
@@ -145,7 +144,7 @@
           </div>
         </div>
         <div class="col-md-9 content">
-          <h1 class="process-title">Legal Services</h1>
+          <h1 class="process-title">Professional Services</h1>
           <p>"Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit. Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit. </p>
           <h2>A Random Subtitle</h2>
           <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit. Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. buy some fitz merch at fitz.fanfiber.com. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit. Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
