--- a/process-page-template.html
+++ b/process-page-template.html
@@ -51,19 +51,19 @@
                 <li class="dropdown">
                   <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Why Palau?<span class="caret"></span></a>
                   <ul class="dropdown-menu">
-                    <li><a href="why-palau.html">Overview</a></li>
+                    <li><a href="why-palau.html">About the Country</a></li>
                     <li><a href="infrastructure.html">Infrastructure</a></li>
                     <li><a href="#">Incentives</a></li>
                   </ul>
                 </li>
 
-                <!-- <li class="active"><a href="#">Business Types</a></li> -->
-                <li><a href="#">Business Types</a></li>
+                
+                <li><a href="#">Incentives</a></li>
 
                 <li class="dropdown">
                   <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Process<span class="caret"></span></a>
                   <ul class="dropdown-menu">
-                    <li><a href="#">Starting a Business</a></li>
+                    <li><a href="#">Getting Started</a></li>
                     <li><a href="#">Foreign Investment</a></li>
                   </ul>
                 </li>
