--- a/process/environmental.html
+++ b/process/environmental.html
@@ -54,19 +54,18 @@
                 <li class="dropdown">
                   <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Why Palau?<span class="caret"></span></a>
                   <ul class="dropdown-menu">
-                    <li><a href="../why-palau.html">Overview</a></li>
+                    <li><a href="../why-palau.html">About the Country</a></li>
                     <li><a href="../infrastructure.html">Infrastructure</a></li>
-                    <li><a href="../incentives.html">Incentives</a></li>
                   </ul>
                 </li>
 
-                <!-- <li class="active"><a href="#">Business Types</a></li> -->
-                <li><a href="../business-types.html">Business Types</a></li>
+                
+                <li><a href="../incentives.html">Incentives</a></li>
 
                 <li class="dropdown">
                   <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Process<span class="caret"></span></a>
                   <ul class="dropdown-menu">
-                    <li><a href="start-business.html">Starting a Business</a></li>
+                    <li><a href="start-business.html">Getting Started</a></li>
                     <li><a href="foreign-investment.html">Foreign Investment</a></li>
                   </ul>
                 </li>
@@ -78,7 +77,7 @@
                     <li><a href="../resources/sbdc.html">SBDC</a></li>
                     <li><a href="../resources/ndbp.html">NDBP</a></li>
                     <li role="separator" class="divider"></li>
-                    <li><a href="../resources/professional-services.html">Legal Services</a></li>
+                    <li><a href="../resources/professional-services.html">Professional Services</a></li>
                     <li><a href="../resources/all-applications.html">All Applications</a></li>
                     <li><a href="../resources/resources.html">All Resources</a></li>
                   </ul>
