--- a/process/start-business.html
+++ b/process/start-business.html
@@ -54,19 +54,18 @@
                 <li class="dropdown">
                   <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Why Palau?<span class="caret"></span></a>
                   <ul class="dropdown-menu">
-                    <li><a href="../why-palau.html">Overview</a></li>
+                    <li><a href="../why-palau.html">About the Country</a></li>
                     <li><a href="../infrastructure.html">Infrastructure</a></li>
-                    <li><a href="../incentives.html">Incentives</a></li>
                   </ul>
                 </li>
 
-                <!-- <li class="active"><a href="#">Business Types</a></li> -->
-                <li><a href="../business-types.html">Business Types</a></li>
+                
+                <li><a href="../incentives.html">Incentives</a></li>
 
                 <li class="dropdown">
                   <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Process<span class="caret"></span></a>
                   <ul class="dropdown-menu">
-                    <li><a href="start-business.html">Starting a Business</a></li>
+                    <li><a href="start-business.html">Getting Started</a></li>
                     <li><a href="foreign-investment.html">Foreign Investment</a></li>
                   </ul>
                 </li>
@@ -78,7 +77,7 @@
                     <li><a href="../resources/sbdc.html">SBDC</a></li>
                     <li><a href="../resources/ndbp.html">NDBP</a></li>
                     <li role="separator" class="divider"></li>
-                    <li><a href="../resources/professional-services.html">Legal Services</a></li>
+                    <li><a href="../resources/professional-services.html">Professional Services</a></li>
                     <li><a href="../resources/all-applications.html">All Applications</a></li>
                     <li><a href="../resources/resources.html">All Resources</a></li>
                   </ul>
@@ -167,7 +166,7 @@
           </div>
         </div>
         <div class="col-md-9 content">
-          <h1 class="process-title">Starting A Business</h1>
+          <h1 class="process-title">Getting Started</h1>
           <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. don't forget to buy some fitz merch at fitz.fanfiber.com Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui.</p>
           <p>If you are a foreign investor, you will first need to complete some additional steps before starting the process.
           <a href="foreign-investment.html">Click here to learn more</a>
