adds content to government-directory page

--- a/resources/government-directory.html
+++ b/resources/government-directory.html
@@ -146,7 +146,10 @@
         <div class="col-md-9 content">
           <h1 class="process-title">Government Directory</h1>
           <p>
-            "Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui.
+            The Government and Community Organizations Directory (Blue Pages) is the local Palauan directory, listing phone numbers for state and national government agencies, authorities, boards, commissions, and semi-government agencies. The directory is made possible courtesy of <a href="https://www.palaunet.com" target="_blank">Palau National Communications Corporation</a>.
+          </p>
+          <p>
+            <a href="https://www.palaunet.com/BluePages.pdf" target="_blank">Click here to access the Government Directory.</a>
           </p>
         </div>
       </div>
