--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="author" content="">
     <link rel="icon" href="../../favicon.ico">
 
-    <title>Website Name</title>
+    <title>Invest Palau</title>
 
     <!-- Bootstrap core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -45,7 +45,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
               </button>
-              <a class="navbar-brand" href="index.html">Website Name </a>
+              <a class="navbar-brand" href="index.html">Invest Palau </a>
             </div>
 
             <div id="navbar" class="navbar-collapse collapse">
@@ -78,6 +78,7 @@
                     <li role="separator" class="divider"></li>
                     <li><a href="resources/professional-services.html">Professional Services</a></li>
                     <li><a href="resources/all-applications.html">All Applications</a></li>
+                    <li><a href="resources/government-directory.html">Government Directory</a></li>
                     <li><a href="resources/resources.html">All Resources</a></li>
                   </ul>
                 </li>
