--- a/resources/professional-services.html
+++ b/resources/professional-services.html
@@ -9,7 +9,7 @@
     <meta name="author" content="">
     <link rel="icon" href="../../favicon.ico">
 
-    <title>Website Name</title>
+    <title>Invest Palau</title>
 
     <!-- Bootstrap core CSS -->
     <link href="../css/bootstrap.min.css" rel="stylesheet">
@@ -46,7 +46,7 @@
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="../index.html">Website Name </a>
+            <a class="navbar-brand" href="../index.html">Invest Palau </a>
           </div>
           <div id="navbar" class="navbar-collapse collapse">
             <ul class="nav navbar-nav navbar-right">
@@ -79,6 +79,7 @@
                     <li role="separator" class="divider"></li>
                     <li><a href="#">Professional Services</a></li>
                     <li><a href="all-applications.html">Applications</a></li>
+                    <li><a href="government-directory.html">Government Directory</a></li>
                     <li><a href="resources.html">All Resources</a></li>
                   </ul>
                 </li>
