--- a/process/immigration-labor.html
+++ b/process/immigration-labor.html
@@ -156,20 +156,26 @@
             </table>
             <table class="table state-applications-table table-hover">
               <tbody>
-                <tr class="clickable-row last-row" data-href="state-applications.html">
+                <tr class="clickable-row" data-href="state-applications.html">
                   <td></td>
                   <td>
                     State Applications
+                  </td>
+                </tr>
+                <tr class="clickable-row last-row" data-href="foreign-investment.html">
+                  <td></td>
+                  <td>
+                    Foreign Investment
                   </td>
                 </tr>
               </tbody>
             </table>
           </div>
           <div class="contact-info-left">
-            <h5>Buearu of Immigration</h5>
+            <h5>Bureau of Immigration</h5>
             <span class="phone-number">+680 488-2498</span>
-            <h5>Social Security Administration</h5>
-            <span class="phone-number">+680 XXX-XXXX</span>
+            <h5>Social Security Office</h5>
+            <span class="phone-number">+680 488-1823</span>
             <h5>Ministry of Justice, Division of Labor</h5>
             <span class="phone-number">+680 488-4331</span>
           </div>
@@ -192,7 +198,7 @@
           <div class="row step-container">
             <span class="step-number">2</span>
             <span class="step-content">
-              Register your company's Palauan employees with the Palauan Social Security Administration and obtain an employer identification number (EIN), available <a href="../applications/national/employee-number-application.pdf" target="_blank">here</a>.
+              Register your company's Palauan employees with the Palauan Social Security Administration.
             </span>
           </div>
 
@@ -241,10 +247,10 @@
               <span class="glyphicon glyphicon-phone-alt"></span>
             </div>
             <span class="step-content">
-              <h5>Buearu of Immigration</h5>
+              <h5>Bureau of Immigration</h5>
               <span class="phone-number">+680 488-2498</span>
-              <h5>Social Security Administration</h5>
-              <span class="phone-number">+680 XXX-XXXX</span>
+              <h5>Social Security Office</h5>
+              <span class="phone-number">+680 488-1823</span>
               <h5>Ministry of Justice, Division of Labor</h5>
               <span class="phone-number">+680 488-4331</span>
           </div>
