--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
             <div class="carousel-caption">
               <h1>Foreign Investor?</h1>
               <p>Click here to learn more about the specific requirements for businesses from abroad.</p>
-              <p><a class="btn btn-sm btn-default" href="#" role="button">Learn more</a></p>
+              <p><a class="btn btn-sm btn-default" href="process/foreign-investment.html" role="button">Learn more</a></p>
             </div>
           </div>
         </div>
@@ -132,7 +132,7 @@
             <div class="carousel-caption">
               <h1>Professional Services</h1>
               <p>Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
-              <p><a class="btn btn-sm btn-default" href="#" role="button">Learn more</a></p>
+              <p><a class="btn btn-sm btn-default" href="resources/professional-services.html" role="button">Learn more</a></p>
             </div>
           </div>
         </div>
@@ -182,10 +182,22 @@
 
       <div class="row featurette">
         <div class="col-md-8">
-          <h2>How do I begin?</h2>
-          <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo. <a href="process/start-business.html">Start the process here. ></a></p>
+          <h2>Foreign investor?</h2>
+          <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo. <a href="process/foreign-investment.html">Start the process here. ></a></p>
         </div>
         <div class="col-md-4">
+          <img class="featurette-image img-responsive center-block" src="images/image.png" alt="Generic placeholder image">
+        </div>
+      </div>
+
+      <hr class="featurette-divider">
+
+      <div class="row featurette">
+        <div class="col-md-8 col-md-push-4">
+          <h2>Apply today.</h2>
+          <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo. <a href="process/start-business.html">Read more. ></a></p>
+        </div>
+        <div class="col-md-4 col-md-pull-8">
           <img class="featurette-image img-responsive center-block" src="images/image.png" alt="Generic placeholder image">
         </div>
       </div>
