--- a/process/building-permit.html
+++ b/process/building-permit.html
@@ -156,10 +156,16 @@
             </table>
             <table class="table state-applications-table table-hover">
               <tbody>
-                <tr class="clickable-row last-row" data-href="state-applications.html">
+                <tr class="clickable-row" data-href="state-applications.html">
                   <td></td>
                   <td>
                     State Applications
+                  </td>
+                </tr>
+                <tr class="clickable-row last-row" data-href="foreign-investment.html">
+                  <td></td>
+                  <td>
+                    Foreign Investment
                   </td>
                 </tr>
               </tbody>
@@ -167,7 +173,7 @@
           </div>
           <div class="contact-info-left">
             <h5>Environmental Quality Preservation Board</h5>
-            <span class="phone-number">+680 XXX-XXXX</span>
+            <span class="phone-number">+680 488-1639</span>
           </div>
         </div>
 
@@ -190,30 +196,7 @@
               The State of Koror requires zoning approval before issuing a building permit. For specific state requirements, visit the <a href="state-applications.html">State Applications page</a>.
             </span>
           </div>
-
-
-          <h3>Materials</h3>
-
-          <div class="row step-container">
-            <span class="step-number">
-              <span class="glyphicon glyphicon-file"></span>
-            </span>
-            <span class="step-content">
-              Donec id elit non mi porta gravida at eget metus.
-            </span>
-          </div>
-
-
-          <h3>Fees</h3>
-
-          <div class="row step-container">
-            <div class="step-number">
-              <span class="glyphicon glyphicon-usd"></span>
-            </div>
-            <span class="step-content">
-              Donec id elit non mi porta gravida at eget metus.
-            </span>
-          </div>
+          
 
           <h3 class="contact-info-bottom">Contact</h3>
 
@@ -223,7 +206,7 @@
             </div>
             <span class="step-content">
               <h5>Environmental Quality Preservation Board</h5>
-              <span class="phone-number">+680 XXX-XXXX</span>
+              <span class="phone-number">+680 488-1639</span>
           </div>
 
         </div>
