--- a/process/environmental.html
+++ b/process/environmental.html
@@ -156,18 +156,24 @@
             </table>
             <table class="table state-applications-table table-hover">
               <tbody>
-                <tr class="clickable-row last-row" data-href="state-applications.html">
+                <tr class="clickable-row" data-href="state-applications.html">
                   <td></td>
                   <td>
                     State Applications
+                  </td>
+                </tr>
+                <tr class="clickable-row last-row" data-href="foreign-investment.html">
+                  <td></td>
+                  <td>
+                    Foreign Investment
                   </td>
                 </tr>
               </tbody>
             </table>
           </div>
           <div class="contact-info-left">
-            <h5>Environmental Quality Preservation Board</h5>
-            <span class="phone-number">+680 XXX-XXXX</span>
+            <h5>Environmental Quality Protection Board</h5>
+            <span class="phone-number">+680 488-1639</span>
           </div>
         </div>
         <div class="col-md-9 content">
@@ -180,25 +186,13 @@
           <div class="row step-container">
             <span class="step-number">1</span>
             <span class="step-content">
-              Submit an application to the Environmental Quality Preservation Board (EQPB) for an earth-moving permit. Part I of the application is available <a href="../applications/national/eqpb/eqpb-general-information.pdf" target="_blank">here</a>. Part II of the application is available <a href="../applications/national/eqpb/eqpb-earthmoving-permit.pdf" target="_blank">here</a>.
+              Submit an application to the Environmental Quality Protection Board (EQPB) for an earth-moving permit. Part I of the application is available <a href="../applications/national/eqpb/eqpb-general-information.pdf" target="_blank">here</a>. Part II of the application is available <a href="../applications/national/eqpb/eqpb-earthmoving-permit.pdf" target="_blank">here</a>.
             </span>
           </div>
           <div class="row step-container">
             <span class="step-number">2</span>
             <span class="step-content">
-              If required by the EQPB, contracts with a local business to perform and receive an Environmental Impact Statement (EIS) (costs may vary by the scope of the project). For projects that do not require an EIA, the process for approval takes approximately 17 working days. For projects requiring an EIA or EIS, allow 45 working days.
-            </span>
-          </div>
-
-
-          <h3>Materials</h3>
-
-          <div class="row step-container">
-            <span class="step-number">
-              <span class="glyphicon glyphicon-file"></span>
-            </span>
-            <span class="step-content">
-              Donec id elit non mi porta gravida at eget metus.
+              If required by the EQPB, contracts with a local business to perform and receive an Environmental Impact Statement (EIS) (costs may vary by the scope of the project). For projects that do not require an Environmental Impact Assesment (EIA), the process for approval takes approximately 17 working days. For projects requiring an EIA or EIS, allow 45 working days.
             </span>
           </div>
 
@@ -221,8 +215,8 @@
               <span class="glyphicon glyphicon-phone-alt"></span>
             </div>
             <span class="step-content">
-              <h5>Environmental Quality Preservation Board</h5>
-              <span class="phone-number">+680 XXX-XXXX</span>
+              <h5>Environmental Quality Protection Board</h5>
+              <span class="phone-number">+680 488-1639</span>
           </div>
 
         </div>
