--- a/process/foreign-investment.html
+++ b/process/foreign-investment.html
@@ -156,10 +156,16 @@
             </table>
             <table class="table state-applications-table table-hover">
               <tbody>
-                <tr class="clickable-row last-row" data-href="state-applications.html">
+                <tr class="clickable-row" data-href="state-applications.html">
                   <td></td>
                   <td>
                     State Applications
+                  </td>
+                </tr>
+                <tr class="clickable-row last-row" data-href="#">
+                  <td></td>
+                  <td>
+                    Foreign Investment
                   </td>
                 </tr>
               </tbody>
