--- a/process/incorporation-licensing.html
+++ b/process/incorporation-licensing.html
@@ -156,10 +156,16 @@
             </table>
             <table class="table state-applications-table table-hover">
               <tbody>
-                <tr class="clickable-row last-row" data-href="state-applications.html">
+                <tr class="clickable-row" data-href="state-applications.html">
                   <td></td>
                   <td>
                     State Applications
+                  </td>
+                </tr>
+                <tr class="clickable-row last-row" data-href="foreign-investment.html">
+                  <td></td>
+                  <td>
+                    Foreign Investment
                   </td>
                 </tr>
               </tbody>
@@ -167,9 +173,9 @@
           </div>
           <div class="contact-info-left">
             <h5>Office of the Attorney General</h5>
-            <span class="phone-number">+680 XXX-XXXX</span>
-            <h5>Bureau of the Treasury</h5>
-            <span class="phone-number">+680 XXX-XXXX</span>
+            <span class="phone-number">+680 488-2481</span>
+            <h5>Bureau of National Treasury, Division of Treasury</h5>
+            <span class="phone-number">+680 488-2566</span>
             <h5>Division of Revenue and Taxation</h5>
             <span class="phone-number">+680 488-2465</span>
           </div>
@@ -177,7 +183,7 @@
 
         <div class="col-md-9 content">
           <h1 class="process-title">Incorporation and Licensing</h1>
-          <h4>Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</h4>
+          <!-- <h4>Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</h4> -->
 
           <h3>Steps</h3>
 
@@ -190,7 +196,7 @@
           <div class="row step-container">
             <span class="step-number">2</span>
             <span class="step-content">
-              Arrange for your complany deeds to be notarized in Palau.
+              Arrange for your company deeds to be notarized in Palau.
             </span>
           </div>
           <div class="row step-container">
@@ -208,24 +214,19 @@
           <div class="row step-container">
             <span class="step-number">5</span>
             <span class="step-content">
-              Submit an application for a Federal business license, available <a href="../applications/national/national-business-license.pdf" target="_blank">here</a>.
+              Obtain an employer identification number (EIN) by applying <a href="../applications/national/employee-number-application.pdf" target="_blank">here</a>.
             </span>
           </div>
           <div class="row step-container">
             <span class="step-number">6</span>
             <span class="step-content">
-              Submit an business license application for each state in which you desire to do business. Local requirements, applications, and contact information for state authorities can be found on the <a href="state-applications.html">State Applications page</a>.
+              Submit an application for a National business license, available <a href="../applications/national/national-business-license.pdf" target="_blank">here</a>.
             </span>
           </div>
-
-          <h3>Materials</h3>
-
           <div class="row step-container">
-            <span class="step-number">
-              <span class="glyphicon glyphicon-file"></span>
-            </span>
+            <span class="step-number">7</span>
             <span class="step-content">
-              Donec id elit non mi porta gravida at eget metus.
+              Submit an business license application for each state in which you desire to do business. Local requirements, applications, and contact information for state authorities can be found on the <a href="state-applications.html">State Applications page</a>.
             </span>
           </div>
 
@@ -249,12 +250,12 @@
               <span class="glyphicon glyphicon-phone-alt"></span>
             </div>
             <span class="step-content">
-              <h5>Office of the Attorney General</h5>
-              <span class="phone-number">+680 XXX-XXXX</span>
-              <h5>Bureau of the Treasury</h5>
-              <span class="phone-number">+680 XXX-XXXX</span>
-              <h5>Division of Revenue and Taxation</h5>
-              <span class="phone-number">+680 488-2465</span>
+            <h5>Office of the Attorney General</h5>
+            <span class="phone-number">+680 488-2481</span>
+            <h5>Bureau of National Treasury, Division of Treasury</h5>
+            <span class="phone-number">+680 488-2566</span>
+            <h5>Division of Revenue and Taxation</h5>
+            <span class="phone-number">+680 488-2465</span>
           </div>
 
         </div>
