--- a/process/start-business.html
+++ b/process/start-business.html
@@ -156,10 +156,16 @@
             </table>
             <table class="table state-applications-table table-hover">
               <tbody>
-                <tr class="clickable-row last-row" data-href="state-applications.html">
+                <tr class="clickable-row" data-href="state-applications.html">
                   <td></td>
                   <td>
                     State Applications
+                  </td>
+                </tr>
+                <tr class="clickable-row last-row" data-href="foreign-investment.html">
+                  <td></td>
+                  <td>
+                    Foreign Investment
                   </td>
                 </tr>
               </tbody>
@@ -168,7 +174,6 @@
         </div>
         <div class="col-md-9 content">
           <h1 class="process-title">Getting Started</h1>
-          <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. don't forget to buy some fitz merch at fitz.fanfiber.com Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui.</p>
           <p>If you are a foreign investor, you will first need to complete some additional steps before starting the process.
           <a href="foreign-investment.html">Click here to learn more</a>
           </p>
