--- a/process/title-cultural-affairs.html
+++ b/process/title-cultural-affairs.html
@@ -156,10 +156,16 @@
             </table>
             <table class="table state-applications-table table-hover">
               <tbody>
-                <tr class="clickable-row last-row" data-href="state-applications.html">
+                <tr class="clickable-row" data-href="state-applications.html">
                   <td></td>
                   <td>
                     State Applications
+                  </td>
+                </tr>
+                <tr class="clickable-row last-row" data-href="foreign-investment.html">
+                  <td></td>
+                  <td>
+                    Foreign Investment
                   </td>
                 </tr>
               </tbody>
@@ -168,7 +174,7 @@
           <div class="contact-info-left">
             <h5>Bureau of Lands and Surveys</h5>
             <span class="phone-number">+680 488-2332</span>
-            <h5>Ministry of Cultural Affairs</h5>
+            <h5>Division of Cultural Affairs</h5>
             <span class="phone-number">+680 488-2489</span>
           </div>
         </div>
@@ -201,18 +207,6 @@
           </div>
 
 
-          <h3>Materials</h3>
-
-          <div class="row step-container">
-            <span class="step-number">
-              <span class="glyphicon glyphicon-file"></span>
-            </span>
-            <span class="step-content">
-              Donec id elit non mi porta gravida at eget metus.
-            </span>
-          </div>
-
-
           <h3>Fees</h3>
 
           <div class="row step-container">
@@ -234,7 +228,7 @@
             <span class="step-content">
               <h5>Bureau of Lands and Surveys</h5>
               <span class="phone-number">+680 488-2332</span>
-              <h5>Ministry of Cultural Affairs</h5>
+              <h5>Division of Cultural Affairs</h5>
               <span class="phone-number">+680 488-2489</span>
           </div>
 
