--- a/process/utilities.html
+++ b/process/utilities.html
@@ -156,10 +156,16 @@
             </table>
             <table class="table state-applications-table table-hover">
               <tbody>
-                <tr class="clickable-row last-row" data-href="state-applications.html">
+                <tr class="clickable-row" data-href="state-applications.html">
                   <td></td>
                   <td>
                     State Applications
+                  </td>
+                </tr>
+                <tr class="clickable-row last-row" data-href="foreign-investment.html">
+                  <td></td>
+                  <td>
+                    Foreign Investment
                   </td>
                 </tr>
               </tbody>
@@ -172,7 +178,7 @@
         </div>
         <div class="col-md-9 content">
           <h1 class="process-title">Utilities</h1>
-          <h4>Palau's public utilities infrastructure is expanding every year, and PPUC keeps it going and growing.</h4>
+          <!-- <h4>Palau's public utilities infrastructure is expanding every year, and PPUC keeps it going and growing.</h4> -->
 
 
           <h3>Steps</h3>
