--- a/process/building-permit.html
+++ b/process/building-permit.html
@@ -172,9 +172,8 @@
             </table>
           </div>
           <div class="contact-info-left">
-            <h5>Environmental Quality Preservation Board</h5>
-            <span class="phone-number">+680 488-1639</span>
-          </div>
+            <h5>Contact information for each state can be found on the State Applications page.</h5>
+            </div>
         </div>
 
         <div class="col-md-9 content">
@@ -187,7 +186,7 @@
           <div class="row step-container">
             <span class="step-number">1</span>
             <span class="step-content">
-              Complete and submit an application to the relevant state for issuance of a building permit. You can find relevant applications on the <a href="state-applications.html">State Applications page</a>.
+              Complete and submit an application to the relevant state for issuance of a building permit. You can find the appropriate application(s) on the <a href="state-applications.html">State Applications page</a>.
             </span>
           </div>
           <div class="row step-container">
@@ -205,8 +204,7 @@
               <span class="glyphicon glyphicon-phone-alt"></span>
             </div>
             <span class="step-content">
-              <h5>Environmental Quality Preservation Board</h5>
-              <span class="phone-number">+680 488-1639</span>
+              <h5>Contact information for each state can be found on the State Applications page.</h5>
           </div>
 
         </div>
