--- a/process/environmental.html
+++ b/process/environmental.html
@@ -131,7 +131,7 @@
                     4
                   </td>
                   <td>
-                    Clearances: Environmental
+                    Clearance: Environmental
                   </td>
                 </tr>
                 <tr class="clickable-row" data-href="building-permit.html">
@@ -186,13 +186,13 @@
           <div class="row step-container">
             <span class="step-number">1</span>
             <span class="step-content">
-              Submit an application to the Environmental Quality Protection Board (EQPB) for an earth-moving permit. Part I of the application is available <a href="../applications/national/eqpb/eqpb-general-information.pdf" target="_blank">here</a>. Part II of the application is available <a href="../applications/national/eqpb/eqpb-earthmoving-permit.pdf" target="_blank">here</a>.
+              Submit an application to the Environmental Quality Protection Board (EQPB). Part I of the application is available <a href="../applications/national/eqpb/eqpb-general-information.pdf" target="_blank">here</a>. Part II of the application is available <a href="../applications/national/eqpb/eqpb-earthmoving-permit.pdf" target="_blank">here</a>.
             </span>
           </div>
           <div class="row step-container">
             <span class="step-number">2</span>
             <span class="step-content">
-              If required by the EQPB, contracts with a local business to perform and receive an Environmental Impact Statement (EIS) (costs may vary by the scope of the project). For projects that do not require an Environmental Impact Assesment (EIA), the process for approval takes approximately 17 working days. For projects requiring an EIA or EIS, allow 45 working days.
+              If required by the EQPB, contract with a local business for an evaluation and receive an Environmental Impact Statement (EIS) (costs may vary by the scope of the project). The process for approval takes approximately 17 working days. For projects requiring an Environmental Impact Assesment (EIA), allow 45 working days.
             </span>
           </div>
 
@@ -204,7 +204,7 @@
               <span class="glyphicon glyphicon-usd"></span>
             </div>
             <span class="step-content">
-              The application fee for an earthmoving permit is US $150.
+              The EQPB application fee is US $150.
             </span>
           </div>
 
