--- a/process/foreign-investment.html
+++ b/process/foreign-investment.html
@@ -178,9 +178,9 @@
         </div>
         <div class="col-md-9 content">
           <h1 class="title">Foreign Investment</h1>
-          <p>Palau’s Foreign Investment Act, amended 2017, seeks to encourage foreign investment in Palau’s economy within the guidelines of sustainable and environmentally responsible development.</p>
+          <h4>Palau’s Foreign Investment Act, amended 2017, seeks to encourage foreign investment in Palau’s economy within the guidelines of sustainable and environmentally responsible development.</h4>
           <p>The Foreign Investment Board is charged with reviewing applications for a Foreign Investment Approval Certificate (FIAC), to ensure that investment and development are in line with the goals and priorities of the people of Palau.</p>
-          <p>To better assess the merits of an investment and the qualifications of the investor(s), the Foreign Investment Board asks that prospective foreign investors pre-satisfy certain steps in the process of opening a new business. To that end, prior to submitting an application for a FIAC, you are required to:</p>
+          <p>To better assess the merits of an investment and the qualifications of the investor(s), the Foreign Investment Board asks that prospective foreign investors pre-satisfy certain steps in the process of opening a new business. To that end, prior to submitting an application for a FIAC, potential investor should:</p>
           <ol>
             <li>Review existing business names with the Corporate Registrar, Office of the Attorney General, and reserve its proposed business name.</li>
             <li>Pay the registration fee to the Bureau of the Treasury and register the proposed company with the Corporate Registrar, Office of the Attorney General.</li>
