--- a/process/incorporation-licensing.html
+++ b/process/incorporation-licensing.html
@@ -208,7 +208,7 @@
           <div class="row step-container">
             <span class="step-number">4</span>
             <span class="step-content">
-              Register your company with the Corporate Registrar and the Office of the Attorney General.
+              Register your company with the Corporate Registrar, Office of the Attorney General.
             </span>
           </div>
           <div class="row step-container">
@@ -220,13 +220,13 @@
           <div class="row step-container">
             <span class="step-number">6</span>
             <span class="step-content">
-              Submit an application for a National business license, available <a href="../applications/national/national-business-license.pdf" target="_blank">here</a>.
+              Submit an application for a national business license, available <a href="../applications/national/national-business-license.pdf" target="_blank">here</a>.
             </span>
           </div>
           <div class="row step-container">
             <span class="step-number">7</span>
             <span class="step-content">
-              Submit an business license application for each state in which you desire to do business. Local requirements, applications, and contact information for state authorities can be found on the <a href="state-applications.html">State Applications page</a>.
+              Submit an application for a business license in each state in which you desire to do business. Local requirements, applications, and contact information for state authorities can be found on the <a href="state-applications.html">State Applications page</a>.
             </span>
           </div>
 
@@ -238,8 +238,9 @@
             </div>
             <span class="step-content">
               The corporate registration fee is US $XX<br />
-              The application fee for a Federal business license is US$XX.<br />
-              Application fees for state business licenses vary depending on the State and the types and number of licenses needed. Visit the <a href="state-applications.html">State process page</a> for more details.
+              The application fee for a national business license is US$XX.<br/>
+              The application fee for an EIN is US$15.<br/>
+              Application fees for state business licenses vary depending on the State and the types and number of licenses needed. Visit the <a href="state-applications.html">State Applications page</a> for more details.
             </span>
           </div>
 
