--- a/process/utilities.html
+++ b/process/utilities.html
@@ -209,7 +209,7 @@
               <span class="glyphicon glyphicon-file"></span>
             </span>
             <span class="step-content">
-              The PPUC Application is available <a href="../applications/national/ppuc-application.pdf" target="_blank">here</a>.
+              The PPUC application is available <a href="../applications/national/ppuc-application.pdf" target="_blank">here</a>.
             </span>
           </div>
 
