--- a/process/immigration-labor.html
+++ b/process/immigration-labor.html
@@ -131,7 +131,7 @@
                     4
                   </td>
                   <td>
-                    Clearances: Environmental
+                    Clearance: Environmental
                   </td>
                 </tr>
                 <tr class="clickable-row" data-href="building-permit.html">
@@ -174,7 +174,7 @@
           <div class="contact-info-left">
             <h5>Bureau of Immigration</h5>
             <span class="phone-number">+680 488-2498</span>
-            <h5>Social Security Office</h5>
+            <h5>Social Security Administration</h5>
             <span class="phone-number">+680 488-1823</span>
             <h5>Ministry of Justice, Division of Labor</h5>
             <span class="phone-number">+680 488-4331</span>
@@ -205,7 +205,7 @@
           <div class="row step-container">
             <span class="step-number">3</span>
             <span class="step-content">
-              Complete an application with the Bureau of Labor to receive approval to employ non-Palauan workers, if needed. The nonresident worker application is available <a href="../applications/national/nonresident-worker-application.pdf" target="_blank">here</a>.
+              Complete an application with the Division of Labor to receive approval to employ non-Palauan workers, if needed. The nonresident worker application is available <a href="../applications/national/nonresident-worker-application.pdf" target="_blank">here</a> for reference only. The process should be initiated in person at the office of the Division of Labor.
             </span>
           </div>
 
@@ -235,8 +235,9 @@
               <span class="glyphicon glyphicon-usd"></span>
             </div>
             <span class="step-content">
-              The visa application fee is US $XX.<br />
-              The Social Security registration fee is US $XX.
+              The visa application fee is US $50.<br />
+              The Social Security registration fee is US $2.00 per employee.<br/>
+              The Nonresident Worker Application fee is US$18.
             </span>
           </div>
 
@@ -249,7 +250,7 @@
             <span class="step-content">
               <h5>Bureau of Immigration</h5>
               <span class="phone-number">+680 488-2498</span>
-              <h5>Social Security Office</h5>
+              <h5>Social Security Administration</h5>
               <span class="phone-number">+680 488-1823</span>
               <h5>Ministry of Justice, Division of Labor</h5>
               <span class="phone-number">+680 488-4331</span>
