--- a/process/title-cultural-affairs.html
+++ b/process/title-cultural-affairs.html
@@ -131,7 +131,7 @@
                     4
                   </td>
                   <td>
-                    Clearances: Environmental
+                    Clearance: Environmental
                   </td>
                 </tr>
                 <tr class="clickable-row" data-href="building-permit.html">
@@ -172,14 +172,14 @@
             </table>
           </div>
           <div class="contact-info-left">
-            <h5>Bureau of Lands and Surveys</h5>
+            <h5>Bureau of Land and Survey</h5>
             <span class="phone-number">+680 488-2332</span>
-            <h5>Division of Cultural Affairs</h5>
+            <h5>Ministry of Cultural Affairs</h5>
             <span class="phone-number">+680 488-2489</span>
           </div>
         </div>
         <div class="col-md-9 content">
-          <h1 class="process-title">Clearance: Title and Cultural Affairs</h1>
+          <h1 class="process-title">Clearances: Title and Cultural Affairs</h1>
           <h4>Business has long been a part of Palauan culture. Our modern businesses coexist with–and make use of–Palau's land and cultural traditions.</h4>
 
 
@@ -188,14 +188,14 @@
           <div class="row step-container">
             <span class="step-number">1</span>
             <span class="step-content">
-              Conduct a title search and obtain an agreement between your business owner and titleholder.
+              Conduct a title search and obtain an agreement between the business owner and titleholder.
             </span>
           </div>
 
           <div class="row step-container">
             <span class="step-number">2</span>
             <span class="step-content">
-              Submit an application (Project Work Order) to the National Bureau of Land and Survey requesting clearance. Allow four working days for clearance to be issued. The application is available <a href="../applications/national/project-work-order.pdf" target="_blank">here</a>.
+              Submit an application (Project Work Order) and Release and Hold Harmless Agreement to the National Bureau of Lands and Surveys requesting clearance. Allow four to eight working days for clearance to be issued. The application is available <a href="../applications/national/project-work-order.pdf" target="_blank">here</a>.
             </span>
           </div>
 
@@ -214,7 +214,8 @@
               <span class="glyphicon glyphicon-usd"></span>
             </div>
             <span class="step-content">
-              There is no fee for the title report issued by the Bureau of Land and Survey.<br />
+              There is no additional fee for the title report.<br/>
+              The application fee for Bureau of Lands and Surveys is US $XX.<br/>
               The application fee for Cultural Affairs clearance is US $XX.
             </span>
           </div>
@@ -226,9 +227,9 @@
               <span class="glyphicon glyphicon-phone-alt"></span>
             </div>
             <span class="step-content">
-              <h5>Bureau of Lands and Surveys</h5>
+              <h5>Bureau of Land and Survey</h5>
               <span class="phone-number">+680 488-2332</span>
-              <h5>Division of Cultural Affairs</h5>
+              <h5>Ministry of Cultural Affairs</h5>
               <span class="phone-number">+680 488-2489</span>
           </div>
 
