--- a/process/building-permit.html
+++ b/process/building-permit.html
@@ -31,7 +31,7 @@
 
   <body>
 
-  <div id="topColor">
+    <div id="topColor">
     </div>
 
     <div class="container">
@@ -131,7 +131,7 @@
                     4
                   </td>
                   <td>
-                    Clearances: Environmental
+                    Clearance: Environmental
                   </td>
                 </tr>
                 <tr class="clickable-row" data-href="#">
