--- a/process/incorporation-licensing.html
+++ b/process/incorporation-licensing.html
@@ -131,7 +131,7 @@
                     4
                   </td>
                   <td>
-                    Clearances: Environmental
+                    Clearance: Environmental
                   </td>
                 </tr>
                 <tr class="clickable-row" data-href="building-permit.html">
@@ -239,7 +239,7 @@
             <span class="step-content">
               The corporate registration fee is US $XX<br />
               The application fee for a national business license is US$XX.<br/>
-              The application fee for an EIN is US$15.<br/>
+              The application fee for an EIN is US $15.<br/>
               Application fees for state business licenses vary depending on the State and the types and number of licenses needed. Visit the <a href="state-applications.html">State Applications page</a> for more details.
             </span>
           </div>
