--- a/process/title-cultural-affairs.html
+++ b/process/title-cultural-affairs.html
@@ -172,7 +172,7 @@
             </table>
           </div>
           <div class="contact-info-left">
-            <h5>Bureau of Land and Survey</h5>
+            <h5>Bureau of Lands and Surveys</h5>
             <span class="phone-number">+680 488-2332</span>
             <h5>Ministry of Cultural Affairs</h5>
             <span class="phone-number">+680 488-2489</span>
@@ -227,7 +227,7 @@
               <span class="glyphicon glyphicon-phone-alt"></span>
             </div>
             <span class="step-content">
-              <h5>Bureau of Land and Survey</h5>
+              <h5>Bureau of Lands and Surveys</h5>
               <span class="phone-number">+680 488-2332</span>
               <h5>Ministry of Cultural Affairs</h5>
               <span class="phone-number">+680 488-2489</span>
