--- a/president-message.html
+++ b/president-message.html
@@ -120,7 +120,7 @@
         <!-- FOOTER -->
         <footer>
           <p class="pull-right"><a href="#">Back to top</a></p>
-          <p>&copy; 2017 <a href="http://palauchamber.com/" target="_blank">Palau Chamber of Commerce</a> &middot; <a href="http://palaugov.pw/" target="_blank">Federal Government Website</a></p>
+          <p>&copy; 2017 <a href="http://palaugov.pw/" target="_blank">Palau National Government</a> &middot; <a href="http://palauchamber.com/" target="_blank">Palau Chamber of Commerce</a></p>
         </footer>
 
       </div>
