--- a/process/foreign-investment.html
+++ b/process/foreign-investment.html
@@ -186,6 +186,7 @@
             <li>Pay the registration fee to the Bureau of the Treasury and register the proposed company with the Corporate Registrar, Office of the Attorney General.</li>
             <li>Identify a location and conclude a provisional agreement with the landowner(s) or landlord(s), including title search and clearances, and zoning approvals (if necessary).</li>
           </ol>
+          <p>For information on public land available for commercial lease, contact the state's Land Authority.</p>
           <p>This information is necessary to complete a FIAC application, available <a href="../applications/national/fiac.pdf" target="_blank">here.</a> Submit completed applications to the Foreign Investment Board. Guidelines for the completion of the FIAC application can be found 
           <a href="../applications/national/fib-requirement.pdf" target="_blank">here.</a></p>
 
@@ -216,7 +217,7 @@
         <!-- FOOTER -->
         <footer>
           <p class="pull-right"><a href="#">Back to top</a></p>
-          <p>&copy; 2017 <a href="http://palauchamber.com/" target="_blank">Palau Chamber of Commerce</a> &middot; <a href="http://palaugov.pw/" target="_blank">Federal Government Website</a></p>
+          <p>&copy; 2017 <a href="http://palaugov.pw/" target="_blank">Palau National Government</a> &middot; <a href="http://palauchamber.com/" target="_blank">Palau Chamber of Commerce</a></p>
         </footer>
 
       </div>
