--- a/process/immigration-labor.html
+++ b/process/immigration-labor.html
@@ -172,7 +172,7 @@
             </table>
           </div>
           <div class="contact-info-left">
-            <h5>Bureau of Immigration</h5>
+            <h5>Division of Immigration</h5>
             <span class="phone-number">+680 488-2498</span>
             <h5>Social Security Administration</h5>
             <span class="phone-number">+680 488-1823</span>
@@ -191,14 +191,14 @@
           <div class="row step-container">
             <span class="step-number">1</span>
             <span class="step-content">
-              Apply for an investor's travel visa from the Department of Immigration, if needed.
+              Apply for an investor's travel visa from the Division of Immigration, if needed.
             </span>
           </div>
 
           <div class="row step-container">
             <span class="step-number">2</span>
             <span class="step-content">
-              Register your company's Palauan employees with the Palauan Social Security Administration.
+              Register your company's Palauan employees with the Palau Social Security Administration. The application can be found <a href="../applications/national/ssn-application.pdf" target="_blank">here</a>.
             </span>
           </div>
 
@@ -237,7 +237,7 @@
             <span class="step-content">
               The visa application fee is US $50.<br />
               The Social Security registration fee is US $2.00 per employee.<br/>
-              The Nonresident Worker Application fee is US$18.
+              The Nonresident Worker Application fee is US$18. Foreign worker permit fees are listed on the Nonresident Worker Application.
             </span>
           </div>
 
@@ -248,7 +248,7 @@
               <span class="glyphicon glyphicon-phone-alt"></span>
             </div>
             <span class="step-content">
-              <h5>Bureau of Immigration</h5>
+              <h5>Division of Immigration</h5>
               <span class="phone-number">+680 488-2498</span>
               <h5>Social Security Administration</h5>
               <span class="phone-number">+680 488-1823</span>
@@ -269,7 +269,7 @@
         <!-- FOOTER -->
         <footer>
           <p class="pull-right"><a href="#">Back to top</a></p>
-          <p>&copy; 2017 <a href="http://palauchamber.com/" target="_blank">Palau Chamber of Commerce</a> &middot; <a href="http://palaugov.pw/" target="_blank">Federal Government Website</a></p>
+          <p>&copy; 2017 <a href="http://palaugov.pw/" target="_blank">Palau National Government</a> &middot; <a href="http://palauchamber.com/" target="_blank">Palau Chamber of Commerce</a></p>
         </footer>
 
       </div>
