--- a/process/incorporation-licensing.html
+++ b/process/incorporation-licensing.html
@@ -238,7 +238,7 @@
             </div>
             <span class="step-content">
               The corporate registration fee is US $XX<br />
-              The application fee for a national business license is US$XX.<br/>
+              The application fee for a national business license varies; see the application for details and amounts.<br/>
               The application fee for an EIN is US $15.<br/>
               Application fees for state business licenses vary depending on the State and the types and number of licenses needed. Visit the <a href="state-applications.html">State Applications page</a> for more details.
             </span>
@@ -272,7 +272,7 @@
         <!-- FOOTER -->
         <footer>
           <p class="pull-right"><a href="#">Back to top</a></p>
-          <p>&copy; 2017 <a href="http://palauchamber.com/" target="_blank">Palau Chamber of Commerce</a> &middot; <a href="http://palaugov.pw/" target="_blank">Federal Government Website</a></p>
+          <p>&copy; 2017 <a href="http://palaugov.pw/" target="_blank">Palau National Government</a> &middot; <a href="http://palauchamber.com/" target="_blank">Palau Chamber of Commerce</a></p>
         </footer>
 
       </div>
