--- a/process/title-cultural-affairs.html
+++ b/process/title-cultural-affairs.html
@@ -195,7 +195,7 @@
           <div class="row step-container">
             <span class="step-number">2</span>
             <span class="step-content">
-              Submit an application (Project Work Order) and Release and Hold Harmless Agreement to the National Bureau of Lands and Surveys requesting clearance. Allow four to eight working days for clearance to be issued. The application is available <a href="../applications/national/project-work-order.pdf" target="_blank">here</a>.
+              Submit an application (Project Work Order) and Release and Hold Harmless Agreement to the National Bureau of Lands and Surveys requesting clearance. Allow four to eight working days for clearance to be issued. The Project Work Order application is available <a href="../applications/national/project-work-order.pdf" target="_blank">here</a> and the Release and Hold Harmless Agreement is available <a href="../applications/national/release-hold-harmless.pdf" target="_blank">here</a>.
             </span>
           </div>
 
@@ -214,8 +214,7 @@
               <span class="glyphicon glyphicon-usd"></span>
             </div>
             <span class="step-content">
-              There is no additional fee for the title report.<br/>
-              The application fee for Bureau of Lands and Surveys is US $XX.<br/>
+              The application fee for Bureau of Lands and Surveys is US $XX. There is no additional fee for the title report.<br/>
               The application fee for Cultural Affairs clearance is US $XX.
             </span>
           </div>
@@ -246,7 +245,7 @@
         <!-- FOOTER -->
         <footer>
           <p class="pull-right"><a href="#">Back to top</a></p>
-          <p>&copy; 2017 <a href="http://palauchamber.com/" target="_blank">Palau Chamber of Commerce</a> &middot; <a href="http://palaugov.pw/" target="_blank">Federal Government Website</a></p>
+          <p>&copy; 2017 <a href="http://palaugov.pw/" target="_blank">Palau National Government</a> &middot; <a href="http://palauchamber.com/" target="_blank">Palau Chamber of Commerce</a></p>
         </footer>
 
       </div>
