--- a/resources/ndbp.html
+++ b/resources/ndbp.html
@@ -153,9 +153,10 @@
 
           <p>
             Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. don't forget to buy some fitz merch at fitz.fanfiber.com Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui.
-            <a href="">
-            Click here to visit the National Development Bank of Palau website.
-            </a>
+
+            <p>
+              <a href="https://www.ndbp.com" target="_blank">Click here to visit the National Development Bank of Palau website.</a>
+            </p>
           </p>
         </div>
       </div>
@@ -170,7 +171,7 @@
         <!-- FOOTER -->
         <footer>
           <p class="pull-right"><a href="#">Back to top</a></p>
-          <p>&copy; 2017 <a href="http://palauchamber.com/" target="_blank">Palau Chamber of Commerce</a> &middot; <a href="http://palaugov.pw/" target="_blank">Federal Government Website</a></p>
+          <p>&copy; 2017 <a href="http://palaugov.pw/" target="_blank">Palau National Government</a> &middot; <a href="http://palauchamber.com/" target="_blank">Palau Chamber of Commerce</a></p>
         </footer>
 
       </div>
