--- a/resources/professional-services.html
+++ b/resources/professional-services.html
@@ -146,11 +146,17 @@
         </div>
         <div class="col-md-9 content">
           <h1 class="process-title">Professional Services</h1>
-          <p>"Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit. Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit. </p>
-          <h2>A Random Subtitle</h2>
-          <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit. Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. buy some fitz merch at fitz.fanfiber.com. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit. Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-          <h2>A Random Subtitle</h2>
-          <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit. Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. great shirts. great deals. great service. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit. Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
+
+          <img src="../images/pba.png" class="img-responsive logo pull-right">
+
+          <h3>Palau Bar Association</h3>
+
+          <p>The Judiciary is tasked with handling some administrative responsibilities for the Palau Bar Association, including administering the Palau Bar Exam, collecting fees from Bar members, and issuing Bar cards.</p>
+
+          <p>The Palau Bar Association ("PBA") is an organization of attorneys, most of whom practice or have practiced law in Palau. The PBA has been in existence for over twenty years. It serves as a proactive voice to represent the views, interests, and concerns of the legal community on all issues affecting the practice of law and administration of justice. The PBA serves as a place where legal professionals promote members' professional growth, improve the quality of the legal profession and work toward meaningful access to justice for all persons. A fundamental precept of the PBA is to encourage and provide opportunities for legal professionals to use their knowledge, skills and resources to promote democratic rule of law, individual rights, civic development and education on law and the legal system.</p>
+
+          <a href="http://www.palausupremecourt.net/pba_main.cshtml" target="_blank">Website link here.</a>
+          <!-- <h2>A Random Subtitle</h2> -->
         </div>
       </div>
       <!-- End main content area -->
@@ -164,7 +170,7 @@
         <!-- FOOTER -->
         <footer>
           <p class="pull-right"><a href="#">Back to top</a></p>
-          <p>&copy; 2017 <a href="http://palauchamber.com/" target="_blank">Palau Chamber of Commerce</a> &middot; <a href="http://palaugov.pw/" target="_blank">Federal Government Website</a></p>
+          <p>&copy; 2017 <a href="http://palaugov.pw/" target="_blank">Palau National Government</a> &middot; <a href="http://palauchamber.com/" target="_blank">Palau Chamber of Commerce</a></p>
         </footer>
 
       </div>
