--- a/infrastructure.html
+++ b/infrastructure.html
@@ -107,19 +107,19 @@
         <ul>
           <h2>Transportation</h2>
           <li>Quick and easy country-wide distribution network facilitated by:</li>
-          <li>Xxx miles of highway and improved roads</li>
+          <li>Complete paved highway and roads in all areas.</li>
           <li>xx passenger and cargo ferries daily</li>
         </ul>
         <ul>
           <h2>Telecommunications</h2>
-          <li>New fiber-optic cable with xxxx capacity</li>
+          <li>New fiber-optic cable with 500 Gbps capacity</li>
           <li>High-speed internet</li>
-          <li>Internet TLD: .pw</li>
+          <li>Internet top-level domain: .pw</li>
         </ul>
         <ul>
           <h2>Utilities</h2>
           <li>Electricity:</li>
-          <li>Modern-era electrical grid with a nationwide capacity of xxxx kW</li>
+          <li>Modern-era electrical grid with a nationwide capacity of 23 megawatts</li>
           <li>120V, 60Hz (North American plug)</li>
           <li>Water and Sanitation:</li>
           <li>Modern water and sanitation systems, currently undergoing improvement and expansion</li>
