--- a/resources/ndbp.html
+++ b/resources/ndbp.html
@@ -152,11 +152,14 @@
           <img src="../images/ndbp.gif" class="img-responsive logo pull-right">
 
           <p>
-            Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. don't forget to buy some fitz merch at fitz.fanfiber.com Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui.
-
-            <p>
-              <a href="https://www.ndbp.com" target="_blank">Click here to visit the National Development Bank of Palau website.</a>
-            </p>
+            The mission of the National Development Bank of Palau is to initiate and promote sustainable economic development within the Republic of Palau.
+          </p>
+          <p>
+            Starting a new business or building a new home is a challenging project. NDBP has the experience and ability to help Palauans succeed in their projects. As the Government's or People's Bank, our services are designed to assist clients rather than make money. Our ultimate goal is economic development and prosperity for the country and its citizens.
+          </p>
+          <p>
+            <a href="https://www.ndbp.com" target="_blank">Click here to visit the National Development Bank of Palau website.</a>
+          </p>
           </p>
         </div>
       </div>
